--- a/unity-project/Assets/Toolkits/Army.uss
+++ b/unity-project/Assets/Toolkits/Army.uss
@@ -1,3 +1,19 @@
+.root {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.left-column {
+    flex: 1;
+    padding: 10px;
+}
+
+.right-column {
+    flex: 1;
+    padding: 10px;
+}
+
 .foldout-bonic {
     font-size: 30px;
     -unity-font-style: bold;
