--- a/unity-project/Assets/Toolkits/Army.uxml
+++ b/unity-project/Assets/Toolkits/Army.uxml
@@ -1,9 +1,21 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/Toolkits/Army.uss?fileID=7433441132597879392&amp;guid=a2981254d0c9afc40a63440d004f1ebe&amp;type=3#Army" />
-    <engine:DropdownField label="Unit 1" class="foldout-bonic" />
-    <engine:DropdownField label="Unit 2" class="foldout-bonic" />
-    <engine:DropdownField label="Unit 3" class="foldout-bonic" />
-    <engine:DropdownField label="Unit 4" class="foldout-bonic" />
-    <engine:Button text="Update" name="update" class="menu-button" />
-    <engine:Button text="Play" name="play" class="menu-button" />
+    <engine:VisualElement class="root">
+        <engine:VisualElement class="left-column">
+            <engine:GroupBox>
+                <engine:DropdownField label="Unit 1" class="foldout-bonic" />
+                <engine:DropdownField label="Unit 2" class="foldout-bonic" />
+                <engine:DropdownField label="Unit 3" class="foldout-bonic" />
+                <engine:DropdownField label="Unit 4" class="foldout-bonic" />
+            </engine:GroupBox>
+            <engine:Button text="Update" name="update" class="menu-button" />
+            <engine:Button text="Play" name="play" class="menu-button" />
+        </engine:VisualElement>
+        <engine:VisualElement class="right-column">
+            <engine:Label text="Unit 1 Stats" class="label-bonic" name="unit1Stats" />
+            <engine:Label text="Unit 2 Stats" class="label-bonic" name="unit2Stats" />
+            <engine:Label text="Unit 3 Stats" class="label-bonic" name="unit3Stats" />
+            <engine:Label text="Unit 4 Stats" class="label-bonic" name="unit4Stats" />
+        </engine:VisualElement>
+    </engine:VisualElement>
 </engine:UXML>
