--- a/unity-project/Assets/Toolkits/Shop.uss
+++ b/unity-project/Assets/Toolkits/Shop.uss
@@ -3,3 +3,74 @@
     -unity-font-style: bold;
     color: rgb(68, 138, 255);
 }
+
+.Title{
+    font-size: 30px;
+    -unity-font-style: bold;
+    color: rgb(255, 74, 68);
+    align-items: center;
+    top: 4%;
+    left: auto;
+    /* -unity-text-align: middle-center; */
+    align-self: center;
+    width: 100%;
+    display:block
+}
+.CardDisplay{
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    height: calc(100% - 50px);
+    flex-grow: 1;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    overflow: auto;
+    box-sizing: border-box;
+    margin-top: 50px; /* Add margin to avoid covering the title */
+}
+.Card{
+    background-color: rgb(65, 154, 164);
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    flex-grow: 1;
+    border: 3px solid rgb(0, 0, 0);
+    width:20%;
+    box-sizing: border-box;
+}
+.UnitName{
+    font-size: 20px;
+    -unity-font-style: bold;
+    color: rgb(255, 255, 255);
+}
+.image{
+    flex-grow: 1;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    color: rgb(68, 138, 255);
+}
+.BuyButton{
+    background-color: rgb(68, 138, 255);
+    color: rgb(255, 255, 255);
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    font-size: 20px;
+    -unity-font-style: bold;
+}
+.BackButton{
+    background-color: rgb(68, 138, 255);
+    color: rgb(255, 255, 255);
+    border-radius: 50%;
+    padding: 10px;
+    margin: 10px;
+    font-size: 20px;
+    -unity-font-style: bold;
+    position: absolute;
+    width: 50px; /* Adjust width and height to make it round */
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
