--- a/unity-project/Assets/Toolkits/Shop.uxml
+++ b/unity-project/Assets/Toolkits/Shop.uxml
@@ -1,12 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<engine:UXML
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns:engine="UnityEngine.UIElements"
-    xmlns:editor="UnityEditor.UIElements"
-    xsi:noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd"
->
+<engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/Toolkits/Shop.uss?fileID=7433441132597879392&amp;guid=614e991358ff0c041905d90f7fee43d1&amp;type=3#Shop" />
-	<engine:Label text="Hello World! From UXML" />
-	<engine:Label class="custom-label" text="Hello World! With Style" />
-
+    <engine:Label text="Botiga&#10;" class="Title" style="height: 32px; width: 108px;" />
+    <engine:ScrollView name="CardDisplay" class="CardDisplay" />
+    <engine:Button text="Tornar" name="BackButton" class="BackButton" style="height: 61px; width: 67px;" />
 </engine:UXML>
