--- a/unity-project/Assets/Toolkits/Army.uxml
+++ b/unity-project/Assets/Toolkits/Army.uxml
@@ -3,7 +3,7 @@
     <engine:VisualElement class="root">
         <engine:VisualElement class="left-column">
             <engine:GroupBox>
-                <engine:DropdownField label="Unit 1" class="foldout-bonic" />
+                <engine:DropdownField label="Unit 1" class="foldout-bonic" style="-unity-font-definition: url(&quot;project://database/Assets/Thaleah_PixelFont/Materials/ThaleahFat_TTF.ttf?fileID=12800000&amp;guid=585188cdc4600544eb408bee749e4b3a&amp;type=3#ThaleahFat_TTF&quot;);" />
                 <engine:DropdownField label="Unit 2" class="foldout-bonic" />
                 <engine:DropdownField label="Unit 3" class="foldout-bonic" />
                 <engine:DropdownField label="Unit 4" class="foldout-bonic" />
@@ -12,10 +12,10 @@
             <engine:Button text="Play" name="play" class="menu-button" />
         </engine:VisualElement>
         <engine:VisualElement class="right-column">
-            <engine:Label text="Unit 1 Stats" class="label-bonic" name="unit1Stats" />
-            <engine:Label text="Unit 2 Stats" class="label-bonic" name="unit2Stats" />
-            <engine:Label text="Unit 3 Stats" class="label-bonic" name="unit3Stats" />
-            <engine:Label text="Unit 4 Stats" class="label-bonic" name="unit4Stats" />
+            <engine:Label text="Unit 1 Stats" name="unit1Stats" class="label-bonic" />
+            <engine:Label text="Unit 2 Stats" name="unit2Stats" class="label-bonic" />
+            <engine:Label text="Unit 3 Stats" name="unit3Stats" class="label-bonic" />
+            <engine:Label text="Unit 4 Stats" name="unit4Stats" class="label-bonic" />
         </engine:VisualElement>
     </engine:VisualElement>
 </engine:UXML>
