--- a/unity-project/Assets/Toolkits/Register.uss
+++ b/unity-project/Assets/Toolkits/Register.uss
@@ -1,41 +1,27 @@
-.root {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.left-column {
-    flex: 1;
-    padding: 10px;
-}
-
-.right-column {
-    flex: 1;
-    padding: 10px;
-}
-
-.foldout-bonic {
+.title {
     font-size: 30px;
     -unity-font-style: bold;
-    color: rgb(68, 172, 255);
+    color: rgb(28, 77, 137);
     align-items: center;
     top: 10%;
     left: auto;
     -unity-text-align: middle-center;
     align-self: center;
     -unity-font-definition: url("project://database/Assets/Thaleah_PixelFont/Materials/ThaleahFat_TTF.ttf?fileID=12800000&guid=585188cdc4600544eb408bee749e4b3a&type=3#ThaleahFat_TTF");
+    display: block;
+    margin-bottom: 10px;
+    z-index: 1;
 }
 
-.label-bonic {
-    font-size: 20px;
-    -unity-font-style: bold;
-    color: rgb(0, 0, 0);
+.menu-button-container {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    top: auto;
-    left: 20%;
-    -unity-text-align: middle-center;
-    align-self: flex-start;
-    -unity-font-definition: url("project://database/Assets/Thaleah_PixelFont/Materials/ThaleahFat_TTF.ttf?fileID=12800000&guid=585188cdc4600544eb408bee749e4b3a&type=3#ThaleahFat_TTF");
+    justify-content: flex-end;
+    height: 10%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
 }
 
 .menu-button {
@@ -63,4 +49,21 @@
     -unity-font-style: bold;
     width: 80%;
     text-align: center;
+}
+
+.Background {
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    height: 80%;
+    flex-grow: 1;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: Visible;
+    box-sizing: border-box;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
 }
