--- a/unity-project/Assets/Toolkits/Shop.uxml
+++ b/unity-project/Assets/Toolkits/Shop.uxml
@@ -1,6 +1,6 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/Toolkits/Shop.uss?fileID=7433441132597879392&amp;guid=614e991358ff0c041905d90f7fee43d1&amp;type=3#Shop" />
-    <engine:Label text="Botiga&#10;" class="Title" style="height: 32px; width: 108px;" />
+    <engine:Label text="Botiga&#10;" class="Title" style="height: 32px; width: 108px; -unity-text-outline-color: rgb(0, 0, 0); -unity-text-outline-width: 12px;" />
     <engine:ScrollView name="CardDisplay" class="CardDisplay" />
-    <engine:Button text="Tornar" name="BackButton" class="BackButton" style="height: 61px; width: 67px;" />
+    <engine:Button text="&lt;-&#10;" name="BackButton" class="BackButton" style="height: 61px; width: 67px; -unity-font-definition: url(&quot;project://database/Assets/Thaleah_PixelFont/Materials/ThaleahFat_TTF.ttf?fileID=12800000&amp;guid=585188cdc4600544eb408bee749e4b3a&amp;type=3#ThaleahFat_TTF&quot;);" />
 </engine:UXML>
